front: gitignore: suppression des vscode

--- a/front/garage-app/src/app/cars/cars.component.html
+++ b/front/garage-app/src/app/cars/cars.component.html
@@ -1,6 +1,6 @@
 <p>cars works!</p>
 <ul>
     <li *ngFor="let car of cars">
-        {{car}}
+        {{car.brand}}&nbsp;{{car.model}}
     </li>
 </ul>
